--- a/style.css
+++ b/style.css
@@ -87,9 +87,7 @@ ul {
   text-align: center;
 }
 
-.img-circle { 
-    border-radius: 50%;
-}
+.img-circle { border-radius: 50%;}
 
 .btn-blue {
     background-color: #6B72E1;
