--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
   body {
-    background: #F7F9FC;
+    background: linear-gradient(45deg, white, #6B72E1, #575F7D);
     color: #575F7D;
     font-family: 'Lora', serif;
     font-size: 17px;
@@ -12,13 +12,13 @@ h1, h2, h3 {
 
 h1 {
     color: #575F7D;
-    font-size: 32px;
+    font-size: 40px;
     font-weight: 900;
 }
 
 h2 {
-    color: #7ECE90;
-    font-size: 20px;
+    color: #575F7D;
+    font-size: 25px;
     font-weight: lighter;
     font-weight: 500;
 }
@@ -29,10 +29,6 @@ a {
     color: #6B72E1;
     font-weight: 600;
     font-size: 16px;
-}
-
-a:hover {
-  color: yellow;
 }
 
 p {
@@ -78,16 +74,21 @@ ul {
   }
 }
 
-.card-white { 
+.card-white {
   background-color: white;
   padding: 40px;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
   border-radius: 4px;
-  margin: 20px 0px;
-  text-align: center;
+  margin: 20px 0px;text-align: center;
 }
 
-.img-circle { border-radius: 50%;}
+.img-circle {
+  border-radius: 50%;
+}
+
+.img-circle:hover {
+  border: #6B72E1 2px solid;
+}
 
 .btn-blue {
     background-color: #6B72E1;
@@ -97,8 +98,9 @@ ul {
 }
 
 .btn-blue:hover {
-  background-color: black;
-  color: yellow;
+  background-color: white;
+  color: #6B72E1;
+  border: #6B72E1 2px solid;
 }
 
 .list-inline {
@@ -116,7 +118,7 @@ ul {
   color: rgb(230, 230, 230);
 }
 .list-inline i:hover {
-  color: yellow;
+  color: #6B72E1;
 }
 
 .fa-twitter-square:before i {
