--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ h1, h2, h3 {
 }
 
 h1 {
-    color: #575F7D;
+    color: #6B72E1;
     font-size: 40px;
     font-weight: 900;
 }
 
 h2 {
-    color: #575F7D;
+    color: #6B72E1;
     font-size: 25px;
     font-weight: lighter;
     font-weight: 500;
